# steer

./: .env.example  .envrc  .gitignore  AGENTS.md  AGENT_REFACTOR_PLAN.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  clippy.toml  configure_hooks.sh  dist-workspace.toml  flake.nix  justfile  open_latest_log.sh  operation_scoped_context.md  release-plz.toml
conductor-tui/: Cargo.toml
conductor-tui/src/: lib.rs
conductor-tui/src/tui/: command_sender.rs  message_formatter.rs  mod.rs
conductor-tui/src/tui/events/: pipeline.rs  processor.rs
conductor-tui/src/tui/state/: content_cache.rs  message_store.rs  mod.rs  tool_registry.rs  view_model.rs
conductor-tui/src/tui/widgets/: cached_renderer.rs  clipping.rs  content_renderer.rs  message_list.rs  mod.rs  styles.rs
crates/conductor-cli/: CHANGELOG.md  Cargo.toml
crates/conductor-cli/src/: error.rs  lib.rs  main.rs  session_config.rs
crates/conductor-cli/src/cli/: args.rs  config.rs  mod.rs
crates/conductor-cli/src/commands/: auth.rs  headless.rs  init.rs  mod.rs  preferences.rs  serve.rs
crates/conductor-cli/tests/: headless_test.rs
crates/conductor-core/: CHANGELOG.md  Cargo.toml
crates/conductor-core/src/: auth_utils.rs  error.rs  lib.rs  preferences.rs  test_utils.rs  workspace.rs
crates/conductor-core/src/api/: error.rs  mod.rs  provider.rs
crates/conductor-core/src/app/: adapters.rs  agent_executor.rs  command.rs  context.rs  context_util.rs  conversation.rs  environment.rs  mod.rs  tool_executor.rs  validation.rs
crates/conductor-core/src/auth/: anthropic.rs  api_key.rs  error.rs  inspect.rs  mod.rs  registry.rs  storage.rs
crates/conductor-core/src/config/: mod.rs  tests.rs
crates/conductor-core/src/events/: mod.rs
crates/conductor-core/src/prompts/: claude.md  claude.rs  default.rs  gemini.rs  mod.rs  o3.rs  tests.rs
crates/conductor-core/src/runners/: one_shot_runner.rs
crates/conductor-core/tests/: agent_executor_test.rs  api_test.rs  app_test.rs  tool_approval_test.rs
crates/conductor-grpc/: CHANGELOG.md  Cargo.toml
crates/conductor-grpc/src/: in_memory.rs  lib.rs  local_server.rs  service_host.rs
crates/conductor-remote-workspace/: CHANGELOG.md  Cargo.toml
crates/conductor-remote-workspace/src/: lib.rs  main.rs  remote_workspace_service.rs
crates/conductor-remote-workspace/tests/: service_test.rs
crates/conductor-tools/: CHANGELOG.md  Cargo.toml
crates/conductor-tools/src/: context.rs  error.rs  lib.rs  result.rs  traits.rs
crates/conductor-tui/: CHANGELOG.md  Cargo.toml
crates/conductor-tui/src/: error.rs  lib.rs  notifications.rs
crates/conductor-tui/tests/: tui_agent_integration_test.rs
crates/conductor-tui/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  one-dark.toml  one-light.toml  solarized-dark.toml  solarized-light.toml  tokyo-night-storm.toml
crates/conductor-workspace/: CHANGELOG.md  Cargo.toml
crates/conductor-workspace-client/: CHANGELOG.md  Cargo.toml
crates/conductor-workspace-client/src/: lib.rs
crates/conductor-workspace/src/: config.rs  error.rs  lib.rs  local.rs  mod.rs  utils.rs
crates/steer/: CHANGELOG.md  Cargo.toml
crates/steer-auth-anthropic/: CHANGELOG.md  Cargo.toml
crates/steer-auth-anthropic/src/: lib.rs
crates/steer-auth-openai/: CHANGELOG.md  Cargo.toml
crates/steer-auth-openai/src/: callback_server.rs  lib.rs
crates/steer-auth-plugin/: CHANGELOG.md  Cargo.toml
crates/steer-auth-plugin/src/: directive.rs  flow.rs  identifiers.rs  lib.rs  plugin.rs  storage.rs  strategy.rs
crates/steer-core/: CHANGELOG.md  Cargo.toml  build.rs
crates/steer-core/assets/: default_catalog.toml  default_models.toml  default_providers.toml
crates/steer-core/src/: agents.rs  auth_utils.rs  catalog.rs  error.rs  lib.rs  model_registry.rs  preferences.rs  primary_agents.rs  test_utils.rs  workspace.rs
crates/steer-core/tests/: agent_executor_test.rs  api_test.rs  app_test.rs  custom_provider_test.rs  provider.rs  tool_approval_test.rs
crates/steer-grpc/: CHANGELOG.md  Cargo.toml
crates/steer-grpc/src/: lib.rs  local_server.rs  service_host.rs
crates/steer-grpc/tests/: auth_flow_integration_test.rs  tui_agent_integration_test.rs
crates/steer-macros/: Cargo.toml
crates/steer-macros/src/: lib.rs
crates/steer-proto/: CHANGELOG.md  Cargo.toml  build.rs
crates/steer-proto/src/: lib.rs
crates/steer-remote-workspace/: CHANGELOG.md  Cargo.toml
crates/steer-remote-workspace/src/: lib.rs  main.rs  remote_workspace_service.rs
crates/steer-remote-workspace/tests/: service_test.rs
crates/steer-tools/: CHANGELOG.md  Cargo.toml
crates/steer-tools/src/: error.rs  lib.rs  result.rs  schema.rs  traits.rs
crates/steer-tui/: CHANGELOG.md  Cargo.toml
crates/steer-tui/benches/: perf.rs
crates/steer-tui/src/: error.rs  lib.rs  notifications.rs
crates/steer-tui/tests/: tui_agent_integration_test.rs
crates/steer-tui/themes/: catppuccin-latte.toml  catppuccin-mocha.toml  dracula.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  nord.toml  one-dark.toml  one-light.toml  solarized-dark.toml  solarized-light.toml  tokyo-night-storm.toml
crates/steer-workspace/: CHANGELOG.md  Cargo.toml
crates/steer-workspace-client/: CHANGELOG.md  Cargo.toml
crates/steer-workspace-client/src/: lib.rs
crates/steer-workspace/benches/: grep_perf.rs
crates/steer-workspace/src/: config.rs  error.rs  lib.rs  local.rs  local_manager.rs  manager.rs  mod.rs  ops.rs  result.rs  utils.rs  workspace_registry.rs
crates/steer/src/: error.rs  lib.rs  main.rs  model_resolver.rs  session_config.rs  telemetry.rs
crates/steer/tests/: headless_test.rs  model_resolution_test.rs
remote-backend/: Cargo.toml  build.rs
remote-backend/src/: lib.rs  main.rs  remote_backend_service.rs
remote-backend/tests/: service_test.rs
tools/: Cargo.toml
tools/src/: context.rs  lib.rs  schema.rs  traits.rs
tools/src/tools/: astgrep.rs  bash.rs  collections.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  replace.rs  todo.rs  view.rs
(+803 files in other folders)
