[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
perf = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
