[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["Brendan Graham <brendanigraham@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
homepage = "https://github.com/brendangraham14/steer"
repository = "https://github.com/brendangraham14/steer"

[workspace.dependencies]
steer = { version = "0.3.0", path = "crates/steer" }
steer-core = { version = "0.3.0", path = "crates/steer-core" }
steer-grpc = { version = "0.3.0", path = "crates/steer-grpc" }
steer-macros = { version = "0.3.0", path = "crates/steer-macros" }
steer-proto = { version = "0.3.0", path = "crates/steer-proto" }
steer-remote-workspace = { version = "0.3.0", path = "crates/steer-remote-workspace" }
steer-tools = { version = "0.3.0", path = "crates/steer-tools" }
steer-tui = { version = "0.3.0", path = "crates/steer-tui" }
steer-workspace = { version = "0.3.0", path = "crates/steer-workspace" }
steer-workspace-client = { version = "0.3.0", path = "crates/steer-workspace-client" }

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
perf = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
