[package]
name = "conductor-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI frontend for Conductor"

[[bin]]
name = "conductor"
path = "src/bin/conductor.rs"

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-grpc = { path = "../conductor-grpc" }
conductor = { path = "../conductor" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# TUI dependencies
ratatui = { version = "*", features = ["crossterm"] }
tui-textarea = "*"
crossterm = "*"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tools = { path = "../tools" }
textwrap = "0.16"
once_cell = "1.17"
similar = "2.2"
lazy_static = "1.4"
tui-widgets = { version = "0.4.1", features = ["scrollview"] }

# Logging
tracing = "0.1"