[package]
name = "conductor-core"
version = "0.1.0"
edition = "2024"
description = "Core logic for Conductor (non-UI)"
license = "MIT"

[dependencies]
# Keep same deps as conductor for now except TUI specific ones
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
similar = { version = "2.5.0", features = ["inline"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
colored = "2.0"
# syntect and ratatui omitted for now (UI)
home = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
glob = "0.3"
regex = "1.9"
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
textwrap = "0.16"
tokio-util = { version = "0.7.14", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
once_cell = "1.21.3"
conductor-macros = { path = "../conductor-macros" }
conductor-proto = { path = "../conductor-proto" }
conductor-tools = { path = "../conductor-tools" }
ignore = "0.4"
globset = "0.4.16"
rand = "0.8"
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
shell-words = "1.1.0"
tracing-subscriber = { version = "0.3.19", features = [
    "std",
    "fmt",
    "env-filter",
] }
tracing-appender = "0.2.3"
# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "migrate",
] }
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
gethostname = "0.5"
lazy_static = "1.5.0"
schemars = { version = "0.8", optional = true }
fuzzy-matcher = "0.3.7"


[build-dependencies]

[features]
default = []
schema = ["dep:schemars", "serde/derive"]

[dev-dependencies]
tempfile = "3.20.0"
# placeholder
