[package]
name = "conductor-core"
version = "0.1.0"
edition = "2024"
description = "Core logic for Conductor (non-UI)"
license = "MIT"

[lints]
workspace = true

[dependencies]
# Keep same deps as conductor for now except TUI specific ones
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
similar = { version = "2.5.0", features = ["inline"] }

thiserror = "1.0"
dirs = "5.0"
colored = "2.0"
home = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4"
glob = "0.3"
regex = "1.9"
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
textwrap = "0.16"
tokio-util = { version = "0.7.14", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
once_cell = "1.21.3"
conductor-macros = { path = "../conductor-macros" }
conductor-proto = { path = "../conductor-proto" }
conductor-tools = { path = "../conductor-tools" }
ignore = "0.4"
globset = "0.4.16"
rand = "0.8"
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
shell-words = "1.1.0"
tracing-subscriber = { version = "0.3.19", features = [
  "std",
  "fmt",
  "env-filter",
] }
tracing-appender = "0.2.3"
rmcp = { git = "https://github.com/BrendanGraham14/rust-sdk", rev = "3f86b21fa41cdd9242df586d173d2e9b308f2dca", features = [
  "client",
  "server",
  "transport-child-process",
  "transport-io",
  "transport-sse-client",
  "transport-sse-server",
  "transport-streamable-http-client",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
  "reqwest",
] }
axum = "0.8"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
gethostname = "0.5"
lazy_static = "1.5.0"
schemars = { version = "0.8" }
fuzzy-matcher = "0.3.7"
git2 = "0.20.2"
nix = { version = "0.30.1", features = ["signal"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
  "json",
  "migrate",
] }
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "windows-native"] }
base64 = "0.22.1"
sha2 = "0.10.9"
open = "5.3.2"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
hyper = { version = "1.6.0", features = ["full"] }
whoami = "1.6.0"
hyper-util = { version = "0.1.14", features = ["server", "server-auto", "tokio"] }
serde_urlencoded = "0.7.1"

[build-dependencies]

[features]
default = []

[dev-dependencies]
tempfile = "3.20.0"
# placeholder
