[package]
name = "conductor-grpc"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-proto = { path = "../conductor-proto" }
conductor-tools = { path = "../conductor-tools" }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"
tower = "0.5"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"

[dev-dependencies]
proptest = "1.7.0"
tempfile = "3.20.0"
