[package]
name = "conductor-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC server and client implementation for Conductor"

[lints]
workspace = true

[dependencies]
conductor-core.workspace = true
conductor-proto.workspace = true
conductor-tools.workspace = true

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"
tower = "0.5"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
async-stream = "0.3.6"

[dev-dependencies]
proptest = "1.7.0"
tempfile = "3.20.0"
