[package]
name = "conductor-remote-workspace"
version = "0.1.0"
edition = "2024"
description = "Remote workspace for Conductor."
authors = ["Brendan Graham <brendanigraham@gmail.com>"]
repository = "https://github.com/brendangraham14/conductor"

[lints]
workspace = true

[[bin]]
name = "conductor-remote-workspace"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gRPC
conductor-grpc = { path = "../conductor-grpc" }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Utilities

gethostname = "0.5"
serde_json = "1.0"

# Shared crates
conductor-tools = { path = "../conductor-tools" }
fuzzy-matcher = "0.3.7"
ignore = "0.4.23"
tokio-stream = "0.1.17"
git2 = { version = "0.20.2", default-features = false }
conductor-proto = { version = "0.1.0", path = "../conductor-proto" }
conductor-workspace = { version = "0.1.0", path = "../conductor-workspace" }
