[package]
name = "conductor-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"
conductor-macros = { version = "0.1.0", path = "../conductor-macros" }

# For tool implementations
regex = "1.0"
walkdir = "2.0"
tempfile = "3.0"
reqwest = { version = "0.11", features = ["json"] }
glob = "0.3"
dirs = "6.0.0"
hex = "0.4.3"
ignore = "0.4"
grep-searcher = "0.1.14"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
ast-grep-core = "0.38.5"
ast-grep-language = "0.38.5"
