[package]
name = "conductor-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI library for Conductor"

[lints]
workspace = true

[dependencies]
conductor-core = { path = "../conductor-core" }
conductor-grpc = { path = "../conductor-grpc" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# TUI dependencies
ratatui = { version = "*", features = ["crossterm"] }
tui-textarea = "*"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
conductor-tools = { path = "../conductor-tools" }
textwrap = "0.16"
once_cell = "1.17"
similar = "2.2"
lazy_static = "1.4"
tui-widgets = { version = "0.4.1", features = ["scrollview"] }

# Logging
tracing = "0.1"
time = { version = "0.3.41", features = ["formatting"] }
ulid = "1.2.1"
notify-rust = "4.11.7"
tui-markdown = "0.3.5"
unicode-width = "0.2.0"
fuzzy-matcher = "0.3.7"
regex = "1.11.1"

[dev-dependencies]
conductor-proto = { path = "../conductor-proto" }
tempfile = "3.8"
tracing-subscriber = "0.3"
tonic = "0.12"
tokio-stream = "0.1"
http = "1.0"
