[package]
name = "conductor-workspace-client"
version = "0.1.0"
edition = "2021"

[dependencies]
conductor-workspace = { path = "../conductor-workspace" }
conductor-proto = { path = "../conductor-proto" }
conductor-tools = { path = "../conductor-tools" }

tonic = { version = "0.12", features = ["tls"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
