[package]
name = "conductor-workspace"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
conductor-proto = { version = "0.1.0", path = "../conductor-proto" }
conductor-tools = { version = "0.1.0", path = "../conductor-tools" }
fuzzy-matcher = "0.3.7"
gix = { version = "0.70", default-features = false, features = ["status", "excludes", "revision", "interrupt"] }
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["sync", "rt"] }
tokio-util = "0.7.15"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
gethostname = "0.5"
prost = "0.13"
prost-types = "0.13"

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
