[package]
name = "steer-auth-anthropic"
version.workspace = true
edition.workspace = true
description = "Anthropic OAuth auth plugin for Steer."
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
steer-auth-plugin.workspace = true
async-trait = "0.1.88"
base64 = "0.22.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
