[package]
name = "steer-auth-openai"
version.workspace = true
edition.workspace = true
description = "OpenAI OAuth auth plugin for Steer."
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
steer-auth-plugin.workspace = true
async-trait = "0.1.88"
base64 = "0.22.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
url = { version = "2.5", features = ["serde"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["server", "server-auto", "tokio"] }
steer-tools = { version = "0.14.2", path = "../steer-tools" }
