[package]
name = "steer-auth-plugin"
version.workspace = true
edition.workspace = true
description = "Auth plugin primitives for Steer."
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false }
keyring = { version = "3.6.2", features = ["apple-native", "linux-native", "windows-native"] }
