[package]
name = "steer-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC server and client implementation for Steer"

[lints]
workspace = true

[dependencies]
steer-core.workspace = true
steer-proto.workspace = true
steer-tools.workspace = true

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
futures = "0.3"
tower = "0.5"

# Async support
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
async-stream = "0.3.6"

[dev-dependencies]
proptest = "1.7.0"
tempfile = "3.20.0"
steer-core = { workspace = true, features = ["test-utils"] }
tokio-util = "0.7.18"
