[package]
name = "steer-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for the Steer coding agent"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = [
    "full",
] } # Need full feature for parsing functions
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
schemars = { version = "1.0", features = ["derive"] }
