[package]
name = "steer-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Protobuf definitions for Steer coding agent"
include = ["src/**/*", "build.rs", "proto/**/*.proto", "Cargo.toml"]

[lints]
workspace = true

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
prost-build = "0.13"
