[package]
name = "steer-remote-workspace"
version.workspace = true
edition.workspace = true
description = "Remote workspace server for Steer."
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "steer-remote-workspace"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

clap = { version = "4.4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

gethostname = "0.5"

tokio-stream = "0.1.17"

steer-proto.workspace = true
steer-workspace.workspace = true
steer-grpc.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
