[package]
name = "steer-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool trait definitions and implementations for Steer"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.0"
steer-macros.workspace = true

# For tool implementations
regex = "1.0"
walkdir = "2.0"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
glob = "0.3"
dirs = "6.0.0"
hex = "0.4.3"
ignore = "0.4"
grep-searcher = "0.1.14"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
ast-grep-core = "0.38.5"
ast-grep-language = "0.38.5"
chrono = "0.4.41"
strum = "0.27.2"
