[package]
name = "steer-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool trait definitions and implementations for Steer"

[lints]
workspace = true

[dependencies]
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "1.0"
steer-workspace.workspace = true
