[package]
name = "steer-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace trait and implementation for Steer"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.41"
steer-proto.workspace = true
steer-tools.workspace = true
fuzzy-matcher = "0.3.7"
gix = { version = "0.73", default-features = false, features = [
    "status",
    "excludes",
    "revision",
    "interrupt",
] }
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["sync", "rt"] }
tokio-util = "0.7.15"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
gethostname = "0.5"
prost = "0.13"
prost-types = "0.13"
jj-lib = "0.35.0"
uuid = { version = "1.17.0", features = ["serde", "v4", "v5"] }
schemars = { version = "1.0", optional = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }

[features]
default = []
schema = ["dep:schemars"]
