[package]
name = "steer-workspace"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Workspace trait and implementation for Steer"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.88"
ast-grep-core = "0.38.5"
ast-grep-language = "0.38.5"
chrono = "0.4.41"
fuzzy-matcher = "0.3.7"
glob = "0.3"
grep-regex = "0.1.13"
grep-searcher = "0.1.14"
ignore = "0.4.23"
regex = "1.0"
gix = { version = "0.73", default-features = false, features = [
    "status",
    "excludes",
    "revision",
    "interrupt",
    "worktree-mutation",
] }
gix-worktree-state = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["fs", "io-util", "rt", "sync"] }
tokio-util = "0.7.15"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
jj-lib = "0.35.0"
uuid = { version = "1.17.0", features = ["serde", "v4", "v5"] }
schemars = { version = "1.0", optional = true }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
criterion = { version = "0.5" }

[[bench]]
name = "grep_perf"
harness = false

[features]
default = []
schema = ["dep:schemars"]
